--- a/style.css
+++ b/style.css
@@ -107,6 +107,7 @@ body {
   color: var(--text-color);
 }
 .search-button,
+.clear-button,
 .btn {
   background-color: var(--button-background-color);
   color: var(--button-text-color);
