--- a/style.css
+++ b/style.css
@@ -418,3 +418,31 @@ a {
 #linksPerPage:hover {
   background-color: #2c2c2c; /* Slightly lighter than navbar */
 }
+
+/* Edit style */
+.results-container {
+  margin-top: 20px;
+}
+.doc {
+  background-color: rgb(250, 250, 255);
+  box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+  margin-bottom: 20px;
+  padding: 15px;
+  border-radius: 8px;
+}
+.doc-title {
+  color: #007bff;
+  font-size: 18px;
+  margin-bottom: 5px;
+}
+.doc-occurrences {
+  color: #6c757d;
+  margin-top: 5px;
+}
+.doc-url {
+  color: #6c757d;
+}
+.doc-term {
+  font-weight: bold;
+  color: #28a745;
+}
