--- a/style.css
+++ b/style.css
@@ -167,7 +167,7 @@ body {
 }
 
 .containerlogo {
-  position: absolute; 
+  text-align: center; 
 }
 
 .top-image {
@@ -404,7 +404,7 @@ body {
   align-items: center;
   border-radius: 10px;
   margin-top: 64px; /* Additional margin at the top */
-  width: 100%;
+  width: 99%;
 }
 .footer-options button {
   background-color: var(--button-background-color);
