stats minor fix

--- a/style.css
+++ b/style.css
@@ -583,7 +583,7 @@ h2 {
   margin-top: 5em;
 }
 #statsContainer th, #statsContainer td {
-  border: 1px solid #ddd;
+  border: 1px solid #000000;
   padding: 8px;
   text-align: center;
   font-weight: bold;
@@ -593,6 +593,7 @@ h2 {
   color: black;
 }
 #statsContainer th {
+  background-color: var(--navbar-background-color);
   padding-top: 12px;
   padding-bottom: 12px;
   color: white;
