minor additions and changes

--- a/style.css
+++ b/style.css
@@ -829,7 +829,7 @@ body {
 }
 
 .left-link {
-  margin-right: auto; /* Set right margin to auto to push it to the left */
+  margin-right: auto; 
 }
 
 
