--- a/style.css
+++ b/style.css
@@ -85,6 +85,7 @@ body {
   margin-left: 20px;
   cursor: pointer;
 }
+
 .search-container,
 .container {
   text-align: center;
@@ -408,11 +409,7 @@ h2 {
   margin-top: 20px;
 }
 
-
 /* End admin page styles */
-
-
-
 
 
 /* Styles for the footer */
@@ -845,7 +842,7 @@ body {
   font-family: "Roboto", sans-serif;
   text-transform: uppercase;
   outline: 0;
-  background: #4CAF50;
+  background: var(--button-background-color);
   width: 100%;
   border: 0;
   padding: 15px;
@@ -856,5 +853,5 @@ body {
   cursor: pointer;
 }
 .form button:hover,.form button:active,.form button:focus {
-  background: #43A047;
+  background: #5a8e00;;
 }
